--- a/x-wing-translations.yml
+++ b/x-wing-translations.yml
@@ -1,33 +1,183 @@
-de:
+en:
+
   factions:
-    rebels: 'Rebellen'
-    imperium: 'Imperium'
+    rebels: 'Rebels'
+    imperium: 'Empire'
+
   crafts:
     x_wing: 'X-Wing'
     y_wing: 'Y-Wing'
     a_wing: 'A-Wing'
     b_wing: 'B-Wing'
-    falcon: 'Millennium Falcon'
+    falcon: 'YT-1300'
     hwk: 'HWK-290'
-    tie: 'TIE-Fighter'
-    advanced: 'TIE-Advanced'
-    interceptor: 'TIE-Abfangjäger'
-    bomber: 'TIE-Bomber'
+    tie: 'TIE Fighter'
+    advanced: 'TIE Advanced'
+    interceptor: 'TIE Interceptor'
+    bomber: 'TIE Bomber'
     slave: 'Slave I'
-    lambda: 'Lambda-Shuttle'
+    lambda: 'Lambda-class Shuttle'
+
   pilots:
-    x_rookie: 'Rookie-Pilot'
-    x_red: 'Pilot der Rot-Staffel'
-    x_luke: 'Luke Skywalker'
-    x_biggs: 'Biggs Darklighter'
-    x_garven: 'Garven Dreis'
-    x_wedge: 'Wedge Antilles'
-    tie_academy: 'Akademie-Pilot'
-    tie_obsidian: 'Pilot der Obsidian-Staffel'
-    tie_black: 'Pilot der Black-Staffel'
-    tie_mauler: '"Mauler Mithel"'
-    tie_curse: '"Cark Curse"'
-    tie_nightbeast: '"Nachtbestie"'
-    tie_gundark: '"Winged Gundark"'
-    tie_backstabber: '"Backstabber"'
-    tie_howlrunner: '"Kreischläufer"'
+    advanced:
+      vader: 'Darth Vader'
+      steele: 'Maarek Stele'
+      storm: 'Storm Squadron Pilot'
+      tempest: 'Tempest Squadron Pilot'
+    bomber:
+      rhymer: 'Major Rhymer'
+      jonus: 'Captain Jonus'
+      gamma: 'Gamma Squadron Pilot'
+      scimitar: 'Scimitar Squadron Pilot'
+    interceptor:
+      saber: 'Saber Squadron Pilot'
+      royal_guard: 'Royal Guard Pilot'
+      lorrir: 'Lieutenant Lorrir'
+      kanos: 'Kir Kanos'
+      cowall: 'Tetran Cowall'
+      cornor: 'Cornor Jax'
+      soontir: 'Soontir Fel'
+      turr: 'Turr Phennir'
+      fels_wrath: '"Fel''s Wrath"'
+      avenger: 'Avenger Squadron Pilot'
+      alpha: 'Alpha Squadron Pilot'
+    lambda:
+      kagi: 'Captain Kagi'
+      jendon: 'Colonel Jendon'
+      yorr: 'Captain Yorr'
+      omicron: 'Omicron Group Pilot'
+    slave:
+      boba: 'Boba Fett'
+      kath: 'Kath Scarlett'
+      krassis: 'Krassis Trelix'
+      bounty_hunter: 'Bounty Hunter'
+    tie:
+      mauler: '"Mauler Mithel"'
+      curse: '"Dark Curse"'
+      nightbeast: '"Night Beast"'
+      black: 'Black Squadron Pilot'
+      obsidian: 'Obsidian Squadron Pilot '
+      academy: 'Academy Pilot'
+      howlrunner: '"Howlrunner"'
+      backstabber: '"Backstabber"'
+      gundark: '"Winged Gundark"'
+    a_wing:
+      tycho: 'Tycho Celchu'
+      arvel: 'Arvel Crynyd'
+      green: 'Green Squadron Pilot'
+      prototype: 'Prototype Pilot'
+    b_wing:
+      numb: 'Ten Numb'
+      ibitsam: 'Ibtisam'
+      dagger: 'Dagger Squadron Pilot'
+      blue: 'Blue Squardon Pilot'
+    falcon:
+      han: 'Han Solo'
+      lando: 'Lando Calrissian'
+      chewbacca: 'Chewbacca'
+      smuggler: 'Outer Rim Smuggler'
+    x_wing:
+      rookie: 'Rookie Pilot'
+      red: 'Red Squadron Pilot'
+      luke: 'Luke Skywalker'
+      biggs: 'Biggs Darklighter'
+      garven: 'Garven Dreis'
+      wedge: 'Wedge Antilles'
+    y_wing:
+      horton: 'Horton Salm'
+      dutch: '"Dutch" Vander'
+      gray: 'Gray Squadron Pilot'
+      gold: 'Gold Squadron Pilot'
+    hwk:
+      jan: 'Jan Ors'
+      kyle: 'Kyle Katarn'
+      roark: 'Roark Garnet'
+      operative: 'Rebel Operative'
+
+
+  upgrade_types:
+    bomb: 'Bomb'
+    cannon: 'Cannon'
+    crew: 'Crew'
+    droid: 'Astromech Droid'
+    elite: 'Elite Pilot Talent'
+    missile: 'Missile'
+    modification: 'Modification'
+    sensors: 'Sensors'
+    title: 'Title'
+    torpedo: 'Torpedo'
+    turret: 'Turret'
+
+  upgrades:
+    bomb:
+      seismic: 'Seismic Charges'
+      proton: 'Proton Bombs'
+      proximity: 'Proximity Mines'
+    cannon:
+      hlc: 'Heavy Laser Cannon'
+      ion: 'Ion Cannon'
+      autoblaster: 'Autoblaster'
+    crew:
+      intelligence_agent: 'Intelligence Agent'
+      flight_instructor: 'Flight Instructor'
+      navigator: 'Navigator'
+      weapons_engineer: 'Weapons Engineer'
+      vader: 'Darth Vader'
+      recon: 'Recon Specialist'
+      captive: 'Rebel Captive'
+      saboteur: 'Saboteur'
+      nien_nunb: 'Nien Nunb'
+      mercenary_copilot: 'Mercenary Copilot'
+      chewbacca: 'Chewbacca'
+      luke: 'Luke Skywalker'
+      gunner: 'Gunner'
+    droid:
+      r2: 'R2 Astromech'
+      r5d8: 'R5-D8'
+      r2d2: 'R2-D2'
+      r5: 'R5 Astromech'
+      r2f2: 'R2-F2'
+      r5k6: 'R5-K6'
+    elite:
+      ptl: 'Push The Limit'
+      elusiveness: 'Elusiveness'
+      swarm_tactics: 'Swarm Tactics'
+      opportunist: 'Opportunist'
+      determination: 'Determination'
+      expert_handling: 'Expert Handling'
+      daredevil: 'Daredevil'
+      veteran_instincts: 'Veteran Instincts'
+      deadeye: 'Deadeye'
+      adrenaline: 'Adrenaline Rush'
+      squad_leader: 'Squad Leader'
+      expose: 'Expose'
+      draw_fire: 'Draw Their Fire'
+      marksmanship: 'Marksmanship'
+    missile:
+      concussion: 'Concussion Missiles'
+      assault: 'Assault Missles'
+      cluster: 'Cluster Missiles'
+      homing: 'Homing Missiles'
+    modification:
+      shield_upgrade: 'Shield Upgrade'
+      hull_upgrade: 'Hull Upgrade'
+      targeting_computer: 'Targeting Computer'
+      apl: 'Anti-Pursuit Lasers'
+      engine_upgrade: 'Engine Upgrade'
+      stealth: 'Stealth Device'
+    sensors:
+      sensor_jammer: 'Sensor Jammer'
+      advanced_sensors: 'Advanced Sensors'
+      fire_control: 'Fire Control System'
+    title:
+      royal_guard: 'Royal Guard TIE'
+      st_321: 'ST-321'
+      crow: 'Moldy Crow'
+      slave_i: 'Slave I'
+      falcon: 'Millennium Falcon'
+    torpedo:
+      proton: 'Proton Torpedoes'
+      advanced_proton: 'Advanced Proton Torpedoes'
+    turret:
+      ion: 'Ion Cannon Turret'
+      blaster: 'Blaster Turret'
